--- a/index.html
+++ b/index.html
@@ -16,13 +16,47 @@
         <div class="navBar">
             <nav>
                 <ul>
-                    <li><a href="#">Shop</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Artists</a></li>
                 </ul>
             </nav>
         </div>
-        <div class="panels"></div>
+        <div class="panel">
+            <img src="images/Rameses B.jpg" class="Music" alt="Rameses B">
+            <h2>Rameses B</h2>
+            <p>Song Thinking about you</p>
+            <a href="https://open.spotify.com/track/7pYAD47YN9M1IHMaq9NB3p?si=0702012c48c74811'"  target="blank">Listin to this song</a>
+        </div>
+        <div class="panel">
+            <img src="images/Veela.jpg" class="Music" alt="Veela">
+            <h2>Veela</h2>
+            <p>Song Ghost Assassin VIP</p>
+            <a href="https://open.spotify.com/track/5psoxZpBVWS27k9Fngaes9?si=7164bebd18e349e5"  target="blank">Listin to this song</a>
+        </div>
+        <div class="panel">
+            <img src="images/TheFatRat.jpg" class="Music" alt="TheFatRat">
+            <h2>TheFatRat</h2>
+            <p>Song Time Lapse</p>
+            <a href="https://open.spotify.com/track/3v8aPisqoGRZEwwf2rCeXQ?si=70125f733e944b7b'"  target="blank">Listin to this song</a>
+        </div>
+        <div class="panel">
+            <img src="images/Zardonic Superhot.jpg" class="Music" alt="Zardonic">
+            <h2>Zardonic</h2>
+            <p>Song Superhot</p>
+            <a href="https://open.spotify.com/track/3ZnaDm5OFyBNKWGOVBgQfx?si=0b8f85933b72448b"  target="blank">Listin to this song</a>
+        </div>
+        <div class="panel">
+            <img src="images/Wellerman.jpg" class="Music" alt="Nathan Evans">
+            <h2>Nathan Evans</h2>
+            <p>Song Wellerman</p>
+            <a href="https://open.spotify.com/track/54OBgO0Xwu20Jak9TMXbR7?si=90943afc249f4118"  target="blank">Listin to this song</a>
+        </div>
+        <div class="panel">
+            <img src="images/OhTheLarceny.jpg" class="Music" alt="OhTheLarceny">
+            <h2>Oh The Larceny</h2>
+            <p>Song Another Level</p>
+            <a href="https://open.spotify.com/track/5D7aDZog6fjw7xLrEqAcir?si=045638e6b38c43a8"  target="blank">Listin to this song</a>
+        </div>
         <div class="footer"></div>
     </div>
 
