--- a/index.html
+++ b/index.html
@@ -57,9 +57,19 @@
             <p>Song Another Level</p>
             <a href="https://open.spotify.com/track/5D7aDZog6fjw7xLrEqAcir?si=045638e6b38c43a8"  target="blank">Listin to this song</a>
         </div>
-        <div class="footer"></div>
+        <!-- <div class="footer"></div> -->
     </div>
+    <div class="clear"></div>
+<footer>
+    <span>&copy;2021</span>
+    <ul>
+        <li><a href="#">Sitemap</a></li>
+        <li><a href="#">Privacy Policy</a></li>
+        <li><a href="#">Terms of Use</a></li>
+        <li>Website by Jacob</li>
 
+    </ul>
+</footer>
 
 </body>
 </html>
